--- a/eureka/.gitignore
+++ b/eureka/.gitignore
@@ -1,27 +1,8 @@
 HELP.md
-# Java related
-.mvn/**
-target/**
-*.jar
-*.war
-*.ear
-*.class
-
-# eclipse specific
-*.pydevproject
-.project
-.metadata
-bin/**
-tmp/**
-tmp/**/*
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -37,7 +18,6 @@ local.properties
 *.iws
 *.iml
 *.ipr
-
 
 ### NetBeans ###
 /nbproject/private/
