--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.application.name=coupon
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.boot.admin.client.url=http://localhost:8084
+management.endpoints.web.exposure.include=*
 #=====================================================================================================
 
 #DATABASE CONF =======================================================================================
