Modificación para despliegue

--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -9,11 +9,9 @@
 #SERVICE CONF DATA ===================================================================================
 spring.main.banner-mode=off
 spring.application.name=coupon
-server.port=${PORT:0}
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.servlet.context-path=/coupon
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.boot.admin.client.url=http://localhost:8084
-management.endpoints.web.exposure.include=*
+spring.jmx.enabled=true
 #=====================================================================================================
 
 #DATABASE CONF =======================================================================================
