--- a/admin-server/src/main/resources/application.properties
+++ b/admin-server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.main.banner-mode=off
-server.port=9090
 spring.application.name=admin-meli
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.jmx.enabled=true
