--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -50,7 +50,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<version>2020.0.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
