--- a/admin-server/src/main/resources/application.properties
+++ b/admin-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.main.banner-mode=off
+server.port=8089
 spring.application.name=admin-meli
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.jmx.enabled=true
