--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -10,8 +10,9 @@
 spring.main.banner-mode=off
 spring.application.name=coupon
 server.servlet.context-path=/coupon
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.jmx.enabled=true
 #=====================================================================================================
 
 #DATABASE CONF =======================================================================================
