--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.main.banner-mode=off
 spring.application.name=meli-gateway-server
+server.port=8085
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.jmx.enabled=true
