--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -10,17 +10,20 @@
 spring.main.banner-mode=off
 spring.application.name=coupon
 server.servlet.context-path=/coupon
-server.port=${PORT:0}
+server.port=35849
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://18.191.191.167:8761/eureka
+spring.boot.admin.client.url=http://3.144.86.240:8089
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 #=====================================================================================================
 
 #DATABASE CONF =======================================================================================
+spring.datasource.url=jdbc:mysql://meli-test.cw9jqsggrznt.us-east-2.rds.amazonaws.com/meli-test1
+spring.datasource.username=admin
+spring.datasource.password=a{D6H^LTb~rm
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://server253497715.postgres.database.azure.com:5432/sampledb
-spring.datasource.username=admiredWigeon6@server253497715
-spring.datasource.password=1dcd78bc-4c34-4f1b-8e5f-f93bc4ef1519
 logging.level.org.hibernate.SQL=debug
 #=====================================================================================================
