--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.main.banner-mode=off
 spring.application.name=meli-gateway-server
 server.port=8085
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.jmx.enabled=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.client.service-url.defaultZone=http://18.191.191.167:8761/eureka
+spring.boot.admin.client.url=http://3.144.86.240:8089
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
