--- a/coupon/src/main/resources/application.properties
+++ b/coupon/src/main/resources/application.properties
@@ -11,19 +11,5 @@ spring.main.banner-mode=off
 spring.application.name=coupon
 server.servlet.context-path=/coupon
 server.port=9080
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-eureka.client.service-url.defaultZone=http://18.191.191.167:8761/eureka
-spring.boot.admin.client.url=http://3.144.86.240:8089
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-#=====================================================================================================
-
-#DATABASE CONF =======================================================================================
-spring.datasource.url=jdbc:mysql://meli-test.cw9jqsggrznt.us-east-2.rds.amazonaws.com/meli-test1
-spring.datasource.username=admin
-spring.datasource.password=a{D6H^LTb~rm
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
+spring.config.import=file:/home/ubuntu/meli/config/coupon-service/coupon.properties
 #=====================================================================================================
